Meta4/fail-logs/fail_2.log
=== FAILED: ../testes/meta4/C_e_D.java ===
1,12d0
< 2
< 3
< 3.0000000000000000e+00
< Teste	de string\"
< %%
< true
< 4
< false
< 5
< 1.2299999999999999e-08
< 0.0000000000000000e+00
< 1.0000000000000000e+01
--- LLVM IR ---
Line 27, col 7: Number .0e-10 out of bounds
--- STDERR ---
lli: lli: /tmp/t.ll:1:1: error: expected top-level entity
Line 27, col 7: Number .0e-10 out of bounds
^

